# FlightDisplay

./: .gitignore  pyproject.toml
data/: README.md
scripts/: build_aircraft_cleaned.py  load_aircrafts_into_sqlight.py
src/flightdisplay/: __init__.py
src/flightdisplay/domain/: aircraft.py  flight_state.py  position.py
src/flightdisplay/domain/repos/: aircraft_repository.py
src/flightdisplay/infrastructure/: aircraft_repository_sqlite.py  db.py  opensky_client.py
src/flightdisplay/services/: flight_service.py
