[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flightdisplay"
version = "0.1.0"
description = "Flight display using OpenSky Network data"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
